test: update tests to use ArgumentMatchers for specifications